Add implementationof InMemoryPollRepository